# microflow-studio

./: .gitignore  .prettierignore  BUGS.md  CHANGELOG.md  CONVENTIONS.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
docs/: ARCHITECTURE.md  BUGS.md  CODE_MAP.md  CODE_QUALITY_REPORT.md  COMPONENTS.md  CONVENTIONS.md  FILE_FORMAT.md  FORMULAS.md  RELATED_WORK.md  SCRIPTING.md  SHORTCUTS.md  SIMULATION.md  TESTING.md
docs/images/: README.md
examples/: parallel_channels.mflow  serpentine_mixer.mflow  t_junction_droplet.mflow
examples/data/: mixing_efficiency.json  pressure_drop.csv  pressure_drop_experiment.csv  velocity_profile.csv  velocity_profile_experiment.csv
examples/projects/: serpentine_mixer.mflow  t_junction_basic.mflow
examples/scripts/: basic_t_junction.lua  droplet_generator.lua  gradient_generator.lua  parametric_mixer.lua  parametric_sweep.lua
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export_commands.rs  llm_commands.rs  mod.rs  project_commands.rs  script_commands.rs  simulation_commands.rs
src-tauri/src/export/: gds.rs  mod.rs
src-tauri/src/geometry/: mod.rs
src-tauri/src/project/: mod.rs
src-tauri/src/scripting/: api.rs  events.rs  mf.rs  mod.rs
src-tauri/src/simulation/: analytic.rs  cfd.rs  hydraulic.rs  mod.rs
src/components/: EditorLoading.tsx  ExperimentImportDialog.tsx  ExportDialog.tsx  KeyboardHelp.tsx  Notifications.tsx  ProgressOverlay.tsx  SweepDialog.tsx
src/hooks/: scriptRunNotify.test.ts  scriptRunNotify.ts  useElementSize.ts  useEscapeClose.ts  useExportFlow.ts  useKeyboardShortcuts.ts  useProjectIO.ts  useScriptDispatcher.test.ts  useScriptDispatcher.ts  useScriptRun.ts  useSimulationRun.ts
(+99 files in other folders)
