[package]
name = "microflow-studio"
version = "1.0.0"
description = "MicroFlow Studio — Mikroakışkan Çip Tasarım ve Simülasyon Platformu"
authors = ["MicroFlow Studio"]
edition = "2021"

[lib]
name = "microflow_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
image = "0.25"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
parking_lot = "0.12"
base64 = "0.22"

[dev-dependencies]
